# drore

./: README.md  TODO.md  pyproject.toml  test.py
drore/: __init__.py
drore/internal/: compiler.py  debugger.py  execution.py  pattern.py
examples/: linear_time.py  parsing.py
tests/: test_alternative.py
