[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drore"
version = "0.1.0"
authors = [
  { name="Amir Livne Bar-on", email="amir.livne.bar@gmail.com" },
]
description = "A better regular expression library for Python"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/amirlb/drore"
"Bug Tracker" = "https://github.com/amirlb/drore/issues"
